<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="examp.mainshinya.layoutsampleapp.MainActivity"
    tools:showIn="@layout/content_main">


    <!-- Add ViewDefine -->

    <!-- ScrollBar  -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Layout  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- TextView  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:text="@string/tv_viewsample" />

            <!-- EditText  -->
            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:inputType="text" />

            <!-- CheckBox  -->
            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/cb_sample1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_sample2" />

            <!-- RadioButton  -->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical" >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton1"
                    android:text="@string/rb_sample1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:text="@string/rb_sample2" />

            </RadioGroup>

            <!-- Spinner -->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:paddingTop="25dp"
                android:paddingBottom="5dp"
                android:entries="@array/lv_sample1" />

            <!-- ListVeiw -->
            <ListView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/listView1"
                android:paddingTop="25dp"
                android:paddingBottom="5dp"
                android:entries="@array/lv_sample1" />

            <!-- Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:text="@string/bt_sample1" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
